# memory_picker

./: .gitignore  README.md  instructions.md  progress.md  pyproject.toml
planning_docs/E01_intake_filtering/: F01_project_bootstrap.json  F02_media_inventory.json  F03_day_assignment.json  F04_quality_assessment.json  F05_file_actions.json  F06_pipeline_entrypoint.json
planning_docs/E02_preprocessing_clustering/: F01_metadata_records.json  F02_visual_similarity.json  F03_cluster_generation.json  F04_cluster_outputs.json
planning_docs/E03_post_cluster_cleanup/: F01_duplicate_detection.json  F02_duplicate_winner_and_rejection.json  F03_survivor_renaming.json  F04_manifest_refresh_and_pipeline_integration.json
planning_docs/E03_selection_and_quota_allocation/: F01_scoring_rules.json  F02_cluster_representatives.json  F03_day_shortlists.json  F04_quota_reallocation.json  F05_to_print_materialization.json
planning_docs/E04_model_integrations_and_hardening/: F01_cloud_provider_integration.json  F02_local_model_integration.json  F03_prompt_and_schema_abstraction.json  F04_reporting_and_resumability.json  F05_packaging_and_hardening.json
planning_docs/E04_optional_ai_categorization/: F01_configurable_taxonomy_and_settings.json  F02_openai_cluster_classification.json  F03_category_materialization.json  F04_manifest_and_rerun_support.json
src/memory_picker/: __init__.py  __main__.py  categorization.py  cli.py  cluster_outputs.py  cluster_pipeline.py  clustering.py  config.py  day_assignment.py  debug_run.py  (+16 more)
tests/: conftest.py  helpers.py  test_pipeline_e2e.py
(+17 files in other folders)
